--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plan</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="style.css">
 
 
@@ -13,7 +17,7 @@
 
 <body>
 
-    <div class="sidebar sidebar-desk">
+    <div class="sidebar ">
 
         <div class="container_nav_bar">
 
@@ -22,7 +26,7 @@
                     <a href="#">
                         <img src="assets/img/logo-planxp.png" alt="">
                     </a>
-                   
+
                 </div>
                 <ul>
                     <li>
@@ -56,13 +60,75 @@
                 <i class="fa-solid fa-arrow-down"></i>
             </div>
 
+            <nav>
+                <div class="container_nav_bar_img">
+                    <a href="#">
+                        <img src="assets/img/logo-planxp.png" alt="">
+                    </a>
+
+                </div>
+                <ul>
+                    <li>
+                        <span class="before">01.</span>
+                        <a href="">/QUEM SOMOS</a>
+                    </li>
+                    <li>
+                        <span class="before">02.</span>
+                        <a href="">/OQUE FAZEMOS</a>
+                    </li>
+                    <li>
+                        <span class="before">03.</span>
+                        <a href="">/PLAY NEWS</a>
+                    </li>
+                    <li>
+                        <span class="before">04.</span>
+                        <a href="">/NOSSOS CLIENTES</a>
+                    </li>
+                    <li>
+                        <span class="before">05.</span>
+                        <a href="">/CONTATO</a>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
     </div>
 
-   
+    <div class="menu_moobile">
+        <header class="nav-top">
+            <img src="assets/img/logo-planxp.png" alt="">
+            <span class="hamburger material-icons" id="ham">menu</span>
+        </header>
+
+
+        <nav class="nav-drill">
+            <ul>
+                <li>
+                    <span class="before">01.</span>
+                    <a href="">/QUEM SOMOS</a>
+                </li>
+                <li>
+                    <span class="before">02.</span>
+                    <a href="">/OQUE FAZEMOS</a>
+                </li>
+                <li>
+                    <span class="before">03.</span>
+                    <a href="">/PLAY NEWS</a>
+                </li>
+                <li>
+                    <span class="before">04.</span>
+                    <a href="">/NOSSOS CLIENTES</a>
+                </li>
+                <li>
+                    <span class="before">05.</span>
+                    <a href="">/CONTATO</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <main>
-        <section class="games">
+        <section class="games  ">
             <div class="container">
                 <span class="before">02.</span>
                 <div class="content">
@@ -86,40 +152,201 @@
                     </strong>
                 </div>
             </div>
-            <div class="containers_cards">
-                <div class="card">
+            <div class="containers_cards ">
+                <div class="card_item">
                     <img src="assets/cards/1.png" alt="">
-
                     <p>
                         A <strong>PlanXP</strong> tem uma equipe <br>
                         qualificada para o<br>
-                        <strong> desenvolvimento de jogos digitais<br></strong> 
-                        para <strong>dispositivos móveis</strong> (smartphones, tablets e afins).
+                        <strong> desenvolvimento de jogos<br> digitais</strong>
+                        para <strong>dispositivos<br> móveis</strong> (smartphones, tablets <br> e afins).
                     </p>
                 </div>
-                <div class="card">
+                <div class="card_item">
                     <img src="assets/cards/2.png" alt="">
-
                     <p>
                         Desenvolvemos games para <br>
-                        anunciar seus produtos e serviços, <br>
-                        através da <strong>gamificação</strong> (aplicações <br>
-                        que utilizam dinâmicas de jogos <br>
-                        para engajamento de usuários, <br>
-                        resolução de problemas e <br>
-                        melhoria no aprendizado).
+                        anunciar seus produtos e <br>
+                        serviços, através da <br>
+                        <strong>gamificação</strong> (aplicações que <br>
+                        utilizam dinâmicas de jogos <br>
+                        para engajamento de<br> usuários,
+                        resolução de <br> problemas e
+                        melhoria no<br> aprendizado).
                     </p>
+                </div>
+                <div class="card_item d-none">
+                    <img src="assets/cards/3.png" alt="">
+                    <p>
+                        Utilizando as últimas <br>
+                        tecnologias para a <strong>criação</strong> <br>
+                        <strong>de games,</strong> trabalhamos de <br>
+                        acordo com as necessidades <br>
+                        dos clientes, sempre <br>
+                        combuscando oferecer o <br>
+                        resultado que ele busca.
+                    </p>
+                </div>
+                <div class="card-shape d-none">
+                    <div class="container-img">
+                        <img src="assets/Shape.png" alt="">
+                    </div>
+
+                    <p>
+                        Experimente <br>
+                        inovar com a <br>
+                        <strong>PlanXP </strong> para <br>
+                        desenvolver os <br>
+                        seus jogos<br> digitais!
+                    </p>
+
+                    <a href="#">ENTRE EM CONTATO<br> AGORA MESMO <i class="fa-solid fa-arrow-down"
+                            style="color: white"></i></a>
+                </div>
+
+            </div>
+
+        </section>
+
+
+        <section class="cases_games pbt px-5 vh-200 d-flex align-items-center ">
+            <div class="container">
+                <div class="row  ">
+
+                    <div class="d-flex align-items-center gap-5">
+                        <div>
+                            <span class="before">02.</span>
+                            <div class="content">
+                                <p>/Oque fazemos</p>
+                                <h3>/Cases Games</h3>
+                            </div>
+                        </div>
+                        <div>
+                            <span>CLIQUE AQUI PARA VER TODO O BLOG <i class="bi bi-arrow-down-right text-white"></i></span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row mt-5">
+                    <div class="container">
+                        <div class="col-12 d-flex gap-3">
+                            <div class="col-3 card_blog">
+                                <div class="container_img">
+                                    <img src="assets/cards/2.png" alt="" class="img-bottom">
+                                    <div class="triangule"></div>
+                                    <img src="assets/shape-2.png" alt="" class="shape">
+                                </div>
+                                <div class="content px-3 mt-3 pb-1">
+                                    <span>SKA</span>
+
+
+                                    <p class="mt_p">
+                                        Aliquam ullamcorper augue a ligula <br>
+                                        aliquam rhoncus. Nullam accumsan auctor <br>
+                                        elementum Nam fermentum mattis ligula <br>
+                                        vulputate bibendum...
+                                    </p>
+
+                                    <a href="">
+                                        SAIBA MAIS <i class="bi bi-arrow-down-right text-white"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3 card_blog">
+                                <div class="container_img">
+                                    <img src="assets/cards/2.png" alt="" class="img-bottom">
+                                    <div class="triangule"></div>
+                                    <img src="assets/shape-2.png" alt="" class="shape">
+                                </div>
+                                <div class="content px-3 mt-3 pb-1">
+                                    <span>TINTAS KILLING </span>
+
+                                    <h4 class="mt-3">Plan cria o novo site<br> para a Tintas Killing</h4>
+
+                                    <p class="mt_card_blog_p">
+                                        Aliquam ullamcorper augue a ligula <br>
+                                        aliquam rhoncus. Nullam accumsan auctor <br>
+                                        elementum Nam fermentum mattis ligula <br>
+                                        vulputate bibendum...
+                                    </p>
+
+                                    <a href="">
+                                        SAIBA MAIS <i class="bi bi-arrow-down-right text-white"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3 card_blog">
+                                <div class="container_img">
+                                    <img src="assets/cards/2.png" alt="" class="img-bottom">
+                                    <div class="triangule"></div>
+                                    <img src="assets/shape-2.png" alt="" class="shape">
+                                </div>
+                                <div class="content px-3 mt-3 pb-1">
+                                    <span>CARGO BR </span>
+
+                                    <h4 class="mt-3">Estamos<br> desenvolvendo o novo<br> site da CargoBR</h4>
+
+                                    <p class="mt_card_blog_p">
+                                        Aliquam ullamcorper augue a ligula <br>
+                                        aliquam rhoncus. Nullam accumsan auctor <br>
+                                        elementum Nam fermentum mattis ligula <br>
+                                        vulputate bibendum...
+                                    </p>
+
+                                    <a href="">
+                                        SAIBA MAIS <i class="bi bi-arrow-down-right text-white"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3 card_blog">
+                                <div class="container_img">
+                                    <img src="assets/cards/2.png" alt="" class="img-bottom">
+                                    <div class="triangule"></div>
+                                    <img src="assets/shape-2.png" alt="" class="shape">
+                                </div>
+                                <div class="content px-3 mt-3 pb-1">
+                                    <span>XALINGO </span>
+
+                                    <h4 class="mt-3">Clubinho Xalingo com<br> novidades</h4>
+
+                                    <p class="mt_card_blog_p">
+                                        Aliquam ullamcorper augue a ligula <br>
+                                        aliquam rhoncus. Nullam accumsan auctor <br>
+                                        elementum Nam fermentum mattis ligula <br>
+                                        vulputate bibendum...
+                                    </p>
+
+                                    <a href="">
+                                        SAIBA MAIS <i class="bi bi-arrow-down-right text-white"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
 
+
+
+
+
     </main>
-
-
-
-
 </body>
 <script src="https://kit.fontawesome.com/3239e58e6a.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.js"
+    integrity="sha512-6DC1eE3AWg1bgitkoaRM1lhY98PxbMIbhgYCGV107aZlyzzvaWCW1nJW2vDuYQm06hXrW0As6OGKcIaAVWnHJw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    const ham = document.getElementById('ham')
+    ham.addEventListener('click', function () {
+        document.body.classList.toggle('nav-is-toggled')
+    })
+</script>
 
 </html>
